--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,12 @@
     // Para obter mais informações, acesse: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Open american_home.html",
-            "file": "c:\\Users\\Eu\\Ruby\\american\\american_home.html"
+            "file": "c:\\Users\\Eu\\Ruby\\american\\american_breifing topics.html"
         }
     ]
 }
